--- a/index-ar.html
+++ b/index-ar.html
@@ -49,49 +49,53 @@
               <li><a href="#!">المدونة</a></li>
               <li><a href="#!">العروض</a></li>
               <li><a href="#!">اتصل بنا</a></li>
-              <li class="last"><a href="index.html">English</a></li>
             </ul>
-          </div>
-        </div>
-        <div class="slider">
-          <div class="content">
-            <div class="swiper-container">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <div class="row">
-                    <div class="col-xl-6 inner-content">
-                      <h1>مرحبا بك في موقع Edecca</h1>
-                      <p>خلافاَ للاعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً، بل إن له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد. من كتاب "حول أقاصي الخير والشر</p><a href="#!">إقرا المزيد</a>
-                    </div>
-                    <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="row">
-                    <div class="col-xl-6 inner-content">
-                      <h1>مرحبا بك في موقع Edecca</h1>
-                      <p>خلافاَ للاعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً، بل إن له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد. من كتاب "حول أقاصي الخير والشر</p><a href="#!">إقرا المزيد</a>
-                    </div>
-                    <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="row">
-                    <div class="col-xl-6 inner-content">
-                      <h1>مرحبا بك في موقع Edecca</h1>
-                      <p>خلافاَ للاعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً، بل إن له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد. من كتاب "حول أقاصي الخير والشر</p><a href="#!">إقرا المزيد</a>
-                    </div>
-                    <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-pagination"></div>
+            <div class="last"><a href="index.html">English</a></div>
           </div>
         </div>
       </div>
     </header>
     <!-- Header-->
+    <!-- Slider-->
+    <div class="slider">
+      <div class="container">
+        <div class="content">
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="row">
+                  <div class="col-xl-6 inner-content">
+                    <h1>مرحبا بك في موقع Edecca</h1>
+                    <p>خلافاَ للاعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً، بل إن له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد. من كتاب "حول أقاصي الخير والشر</p><a href="#!">إقرا المزيد</a>
+                  </div>
+                  <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="row">
+                  <div class="col-xl-6 inner-content">
+                    <h1>مرحبا بك في موقع Edecca</h1>
+                    <p>خلافاَ للاعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً، بل إن له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد. من كتاب "حول أقاصي الخير والشر</p><a href="#!">إقرا المزيد</a>
+                  </div>
+                  <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="row">
+                  <div class="col-xl-6 inner-content">
+                    <h1>مرحبا بك في موقع Edecca</h1>
+                    <p>خلافاَ للاعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً، بل إن له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد. من كتاب "حول أقاصي الخير والشر</p><a href="#!">إقرا المزيد</a>
+                  </div>
+                  <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </div>
+    <!-- Slider-->
     <!-- Products-->
     <div class="products">
       <div class="container">
