--- a/index.html
+++ b/index.html
@@ -49,49 +49,53 @@
               <li><a href="#!">Blog</a></li>
               <li><a href="#!">Promotions</a></li>
               <li><a href="#!">Contact</a></li>
-              <li class="last"><a href="index-ar.html">العربية</a></li>
             </ul>
-          </div>
-        </div>
-        <div class="slider">
-          <div class="content">
-            <div class="swiper-container">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <div class="row">
-                    <div class="col-xl-6 inner-content">
-                      <h1>WELCOME TO EGC WEBSITE</h1>
-                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem Ipsum is simply dummy text of the printing and typesetting industry .</p><a href="#!">READ MORE</a>
-                    </div>
-                    <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="row">
-                    <div class="col-xl-6 inner-content">
-                      <h1>WELCOME TO EGC WEBSITE</h1>
-                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem Ipsum is simply dummy text of the printing and typesetting industry .</p><a href="#!">READ MORE</a>
-                    </div>
-                    <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="row">
-                    <div class="col-xl-6 inner-content">
-                      <h1>WELCOME TO EGC WEBSITE</h1>
-                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem Ipsum is simply dummy text of the printing and typesetting industry .</p><a href="#!">READ MORE</a>
-                    </div>
-                    <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-pagination"></div>
+            <div class="last"><a href="index-ar.html">العربية</a></div>
           </div>
         </div>
       </div>
     </header>
     <!-- Header-->
+    <!-- Slider-->
+    <div class="slider">
+      <div class="container">
+        <div class="content">
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="row">
+                  <div class="col-xl-6 inner-content">
+                    <h1>WELCOME TO EGC WEBSITE</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem Ipsum is simply dummy text of the printing and typesetting industry .</p><a href="#!">READ MORE</a>
+                  </div>
+                  <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="row">
+                  <div class="col-xl-6 inner-content">
+                    <h1>WELCOME TO EGC WEBSITE</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem Ipsum is simply dummy text of the printing and typesetting industry .</p><a href="#!">READ MORE</a>
+                  </div>
+                  <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="row">
+                  <div class="col-xl-6 inner-content">
+                    <h1>WELCOME TO EGC WEBSITE</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem Ipsum is simply dummy text of the printing and typesetting industry .</p><a href="#!">READ MORE</a>
+                  </div>
+                  <div class="col-xl-6 slider-pic-animate"><img src="images/header.jpg" alt=""/></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </div>
+    <!-- Slider-->
     <!-- Products-->
     <div class="products">
       <div class="container">
@@ -359,7 +363,7 @@
           <div class="col-lg-6">
             <div class="head">
               <h2 data-aos="fade-up" data-aos-duration="1500">FAQ</h2>
-              <p data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">questions and answers for common subjects</p><a class="more-work" href="#!" data-aos="fade-right" data-aos-duration="1500">See More</a>
+              <p data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">questions and answers for common subjects</p><a class="more-work" href="#!" data-aos="fade-left" data-aos-duration="1500">See More</a>
             </div>
             <div class="Occord" data-aos="fade-left" data-aos-duration="1500">
               <div class="box">
