--- a/index-ar.html
+++ b/index-ar.html
@@ -23,14 +23,14 @@
         <div class="close1"><img src="images/close.png" alt=""/></div>
       </div>
       <ul class="res">
-        <li><a href="#!">الرئيسية</a></li>
-        <li><a href="#!">المنتجات</a></li>
-        <li><a href="#!">الرؤية والرسالة</a></li>
+        <li><a href="index.html">الرئيسية</a></li>
+        <li><a href="materials.html">المنتجات</a></li>
+        <li><a href="vision.html">الرؤية والرسالة</a></li>
         <li><a href="#!">لماذا Edecca</a></li>
-        <li><a href="#!">الاسئلة</a></li>
-        <li><a href="#!">المدونة</a></li>
-        <li><a href="#!">العروض</a></li>
-        <li><a href="#!">اتصل بنا</a></li>
+        <li><a href="faq.html">الاسئلة</a></li>
+        <li><a href="blog.html">المدونة</a></li>
+        <li><a href="article.html">العروض</a></li>
+        <li><a href="contact-us.html">اتصل بنا</a></li>
       </ul>
       <!-- Mob Nav-->
     </div>
@@ -41,14 +41,14 @@
           <div class="content">
             <div class="logo"><a href="#!"><img class="img-fluid" src="images/logo.svg" alt=""/></a><svg class="icon icon-menu menuTriger"><path d="M16.4 9h-12.8c-0.552 0-0.6 0.447-0.6 1s0.048 1 0.6 1h12.8c0.552 0 0.6-0.447 0.6-1s-0.048-1-0.6-1zM16.4 13h-12.8c-0.552 0-0.6 0.447-0.6 1s0.048 1 0.6 1h12.8c0.552 0 0.6-0.447 0.6-1s-0.048-1-0.6-1zM3.6 7h12.8c0.552 0 0.6-0.447 0.6-1s-0.048-1-0.6-1h-12.8c-0.552 0-0.6 0.447-0.6 1s0.048 1 0.6 1z"></path></svg></div>
             <ul class="links res">
-              <li><a href="#!">الرئيسية</a></li>
-              <li><a href="#!">المنتجات</a></li>
-              <li><a href="#!">الرؤية والرسالة</a></li>
+              <li><a href="index.html">الرئيسية</a></li>
+              <li><a href="materials.html">المنتجات</a></li>
+              <li><a href="vision.html">الرؤية والرسالة</a></li>
               <li><a href="#!">لماذا Edecca</a></li>
-              <li><a href="#!">الاسئلة</a></li>
-              <li><a href="#!">المدونة</a></li>
-              <li><a href="#!">العروض</a></li>
-              <li><a href="#!">اتصل بنا</a></li>
+              <li><a href="faq.html">الاسئلة</a></li>
+              <li><a href="blog.html">المدونة</a></li>
+              <li><a href="article.html">العروض</a></li>
+              <li><a href="contact-us.html">اتصل بنا</a></li>
             </ul>
             <div class="last"><a href="index.html">English</a></div>
           </div>
