--- a/about.html
+++ b/about.html
@@ -59,38 +59,52 @@
     <!-- Bread Crumb-->
     <div class="breadCrumb">
       <div class="container">
-        <div class="title">Title of Article Here</div>
+        <div class="title">About</div>
         <ul class="res">
           <li><a href="#!">Home</a></li>
-          <li><a href="#!">Blog</a></li>
-          <li><a href="#!">Title of Article Here</a></li>
+          <li><a href="#!">About</a></li>
         </ul>
       </div>
     </div>
     <!-- Bread Crumb-->
-    <!-- Article-->
-    <div class="article">
+    <!-- Product Details-->
+    <div class="productDetails">
       <div class="container">
-        <div class="top">
-          <div class="pic"><img class="img-fluid" src="images/article.jpg" alt=""/></div>
-          <div class="bottom">
-            <h2>Title of Article Here</h2><a class="share" href="#!"><img class="svg" src="images/share-2.svg" alt=""/><span>share</span></a>
-            <div class="stats">
-              <ul class="res">
-                <li><img src="images/clock.svg" alt=""/><span>3 Aug 2020</span></li>
-                <li><img src="images/over1.svg" alt=""/><span>1250</span></li>
-              </ul>
-            </div>
+        <div class="row d-flex justify-content-between">
+          <div class="col-lg-6 order-2 order-lg-1" data-aos="zoom-out"><span>Feature Title Here</span>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae neque rerum, voluptas impedit, voluptates ipsam, soluta dolorum adipisci natus cupiditate esse ab? Laudantium modi blanditiis sequi consequuntur eos eligendi incidunt, repellat velit reiciendis optio assumenda!</p>
           </div>
-        </div>
-        <div class="bottom">
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem  Ipsum is simply dummy text of the printing and typesetting industry .Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem Ipsum is simply dummy text of the printing and typesetting industry .</p>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem  Ipsum is simply dummy text of the printing and typesetting industry .Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem Ipsum is simply dummy text of the printing and typesetting industry .</p>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem  Ipsum is simply dummy text of the printing and typesetting industry .Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard Lorem Ipsum is simply dummy text of the printing and typesetting industry .</p>
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-out" data-aos-delay="300"><img class="img-fluid" src="images/product1.jpg" alt=""/></div>
+          <div class="col-lg-6 order-3" data-aos="zoom-out"><img class="img-fluid" src="images/product2.jpg" alt=""/></div>
+          <div class="col-lg-6 order-4" data-aos="zoom-out" data-aos-delay="300"><span>Feature Title Here</span>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dolorem in atque, cumque optio ratione vero et dolor aperiam magni dolorum, reiciendis iure ipsum rerum rem saepe nemo? Pariatur culpa, laboriosam optio dolore non maiores. </p>
+          </div>
+          <div class="col-lg-6 order-6 order-lg-5" data-aos="zoom-out"><span>Feature Title Here</span>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae neque rerum, voluptas impedit, voluptates ipsam, soluta dolorum adipisci natus cupiditate esse ab? Laudantium modi blanditiis sequi consequuntur eos eligendi incidunt, repellat velit reiciendis optio assumenda!</p>
+          </div>
+          <div class="col-lg-6 order-5 order-lg-6" data-aos="zoom-out" data-aos-delay="300"><img class="img-fluid" src="images/product1.jpg" alt=""/></div>
+          <div class="col-lg-6 order-7 order-lg-7" data-aos="zoom-out"><img class="img-fluid" src="images/product4.jpg" alt=""/></div>
+          <div class="col-lg-6 order-8 order-lg-8" data-aos="zoom-out" data-aos-delay="300"><span>Feature Title Here</span>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae neque rerum, voluptas impedit, voluptates ipsam, soluta dolorum adipisci natus cupiditate esse ab? Laudantium modi blanditiis sequi consequuntur eos eligendi incidunt, repellat velit reiciendis optio assumenda!</p>
+          </div>
+          <div class="col-lg-6 order-10 order-lg-9" data-aos="zoom-out"><span>Feature Title Here</span>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae neque rerum, voluptas impedit, voluptates ipsam, soluta dolorum adipisci natus cupiditate esse ab? Laudantium modi blanditiis sequi consequuntur eos eligendi incidunt, repellat velit reiciendis optio assumenda!</p>
+          </div>
+          <div class="col-lg-6 order-9 order-lg-10" data-aos="zoom-out" data-aos-delay="300"><img class="img-fluid" src="images/product5.jpg" alt=""/></div>
+          <div class="col-lg-6 order-11 order-lg-11" data-aos="zoom-out"><img class="img-fluid" src="images/product6.jpg" alt=""/></div>
+          <div class="col-lg-6 order-12 order-lg-12" data-aos="zoom-out" data-aos-delay="300"><span>Feature Title Here</span>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae neque rerum, voluptas impedit, voluptates ipsam, soluta dolorum adipisci natus cupiditate esse ab? Laudantium modi blanditiis sequi consequuntur eos eligendi incidunt, repellat velit reiciendis optio assumenda!</p>
+          </div>
         </div>
       </div>
     </div>
-    <!-- Article-->
+    <!-- Product Details-->
     <!-- Contact-->
     <div class="contact-sec">
       <div class="container">
