--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>EGC</title>
-    <link rel="icon" type="image/png" href="images/fav.png"/>
+    <link rel="icon" type="image/png" href="images/favicon.png"/>
     <link rel="stylesheet" href="css/bootstrap4.min.css"/>
     <link rel="stylesheet" href="css/fontAwesome.css"/>
     <link rel="stylesheet" href="css/swiper.min.css"/>
@@ -26,10 +26,10 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="materials.html">Products</a></li>
         <li><a href="vision.html">vision & mission</a></li>
-        <li><a href="#!">Why Edecca</a></li>
+        <li><a href="about.html">Why Edecca</a></li>
         <li><a href="faq.html">Faq</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="article.html">Promotions</a></li>
+        <li><a href="article.html">Agents</a></li>
         <li><a href="contact-us.html">Contact</a></li>
       </ul>
       <!-- Mob Nav-->
@@ -44,10 +44,10 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="materials.html">Products</a></li>
               <li><a href="vision.html">vision & mission</a></li>
-              <li><a href="#!">Why Edecca</a></li>
+              <li><a href="about.html">Why Edecca</a></li>
               <li><a href="faq.html">Faq</a></li>
               <li><a href="blog.html">Blog</a></li>
-              <li><a href="article.html">Promotions</a></li>
+              <li><a href="article.html">Agents</a></li>
               <li><a href="contact-us.html">Contact</a></li>
             </ul>
             <div class="last"><a href="index-ar.html">العربية</a></div>
@@ -59,10 +59,10 @@
     <!-- Bread Crumb-->
     <div class="breadCrumb">
       <div class="container">
-        <div class="title">BLOG</div>
+        <div class="title">Faq</div>
         <ul class="res">
           <li><a href="#!">Home</a></li>
-          <li><a href="#!">Blog</a></li>
+          <li><a href="#!">Faq</a></li>
         </ul>
       </div>
     </div>
@@ -138,7 +138,7 @@
           <li><a href="#!">Why Edecca</a></li>
           <li><a href="#!">Faq</a></li>
           <li><a href="#!">Blog</a></li>
-          <li><a href="#!">Promotions</a></li>
+          <li><a href="#!">Agents</a></li>
           <li><a href="#!">Contact</a></li>
         </ul>
         <div class="socials" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400"><a href="#!"><img class="svg" src="images/social1.svg" alt=""/></a><a href="#!"><img class="svg" src="images/social2.svg" alt=""/></a><a href="#!"><img class="svg" src="images/social3.svg" alt=""/></a><a href="#!"><img class="svg" src="images/social4.svg" alt=""/></a></div>
