--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>EGC</title>
-    <link rel="icon" type="image/png" href="images/fav.png"/>
+    <link rel="icon" type="image/png" href="images/favicon.png"/>
     <link rel="stylesheet" href="css/bootstrap4.min.css"/>
     <link rel="stylesheet" href="css/fontAwesome.css"/>
     <link rel="stylesheet" href="css/swiper.min.css"/>
@@ -26,7 +26,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="materials.html">Products</a></li>
         <li><a href="vision.html">vision & mission</a></li>
-        <li><a href="#!">Why Edecca</a></li>
+        <li><a href="about.html">Why Edecca</a></li>
         <li><a href="faq.html">Faq</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="article.html">Promotions</a></li>
@@ -43,8 +43,8 @@
             <ul class="links res">
               <li><a href="index.html">Home</a></li>
               <li><a href="materials.html">Products</a></li>
-              <li><a href="vision.html">vision & mission</a></li>
-              <li><a href="#!">Why Edecca</a></li>
+              <li><a href="#vision">vision & mission</a></li>
+              <li><a href="about.html">Why Edecca</a></li>
               <li><a href="faq.html">Faq</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li><a href="article.html">Promotions</a></li>
@@ -118,7 +118,7 @@
     </div>
     <!-- Products-->
     <!-- Overview-->
-    <div class="overview">
+    <div class="overview" id="vision">
       <div class="container">
         <div class="row">
           <div class="col-lg-6" data-aos="zoom-out" data-aos-duration="1500">
