--- a/product.html
+++ b/product.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>EGC</title>
-    <link rel="icon" type="image/png" href="images/fav.png"/>
+    <link rel="icon" type="image/png" href="images/favicon.png"/>
     <link rel="stylesheet" href="css/bootstrap4.min.css"/>
-    <link rel="stylesheet" href="css/fontAwesome.css"/>
+    <link rel="stylesheet" href="css/fancybox.min.css"/>
     <link rel="stylesheet" href="css/swiper.min.css"/>
     <link rel="stylesheet" href="css/aos.css"/>
     <link rel="stylesheet" href="css/home.css"/>
@@ -26,10 +26,10 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="materials.html">Products</a></li>
         <li><a href="vision.html">vision & mission</a></li>
-        <li><a href="#!">Why Edecca</a></li>
+        <li><a href="about.html">Why Edecca</a></li>
         <li><a href="faq.html">Faq</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="article.html">Promotions</a></li>
+        <li><a href="article.html">Agents</a></li>
         <li><a href="contact-us.html">Contact</a></li>
       </ul>
       <!-- Mob Nav-->
@@ -44,10 +44,10 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="materials.html">Products</a></li>
               <li><a href="vision.html">vision & mission</a></li>
-              <li><a href="#!">Why Edecca</a></li>
+              <li><a href="about.html">Why Edecca</a></li>
               <li><a href="faq.html">Faq</a></li>
               <li><a href="blog.html">Blog</a></li>
-              <li><a href="article.html">Promotions</a></li>
+              <li><a href="article.html">Agents</a></li>
               <li><a href="contact-us.html">Contact</a></li>
             </ul>
             <div class="last"><a href="index-ar.html">العربية</a></div>
@@ -77,13 +77,7 @@
             <div class="product-pic">
               <div class="main-pic">
                 <div class="swiper-container gallery-top">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img class="img-fluid" src="images/product.jpg" alt=""/></div>
-                    <div class="swiper-slide"><img class="img-fluid" src="images/product.jpg" alt=""/></div>
-                    <div class="swiper-slide"><img class="img-fluid" src="images/product.jpg" alt=""/></div>
-                    <div class="swiper-slide"><img class="img-fluid" src="images/product.jpg" alt=""/></div>
-                    <div class="swiper-slide"><img class="img-fluid" src="images/product.jpg" alt=""/></div>
-                  </div>
+                  <div class="swiper-wrapper"><a class="swiper-slide" data-fancybox="gallery" href="images/product.jpg"><img class="img-fluid" src="images/product.jpg" alt=""/></a><a class="swiper-slide" data-fancybox="gallery" href="images/product.jpg"><img class="img-fluid" src="images/product.jpg" alt=""/></a><a class="swiper-slide" data-fancybox="gallery" href="images/product.jpg"><img class="img-fluid" src="images/product.jpg" alt=""/></a><a class="swiper-slide" data-fancybox="gallery" href="images/product.jpg"><img class="img-fluid" src="images/product.jpg" alt=""/></a><a class="swiper-slide" data-fancybox="gallery" href="images/product.jpg"><img class="img-fluid" src="images/product.jpg" alt=""/></a></div>
                 </div>
               </div>
               <div class="product-Thumbs">
@@ -170,7 +164,7 @@
           <li><a href="#!">Why Edecca</a></li>
           <li><a href="#!">Faq</a></li>
           <li><a href="#!">Blog</a></li>
-          <li><a href="#!">Promotions</a></li>
+          <li><a href="#!">Agents</a></li>
           <li><a href="#!">Contact</a></li>
         </ul>
         <div class="socials" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400"><a href="#!"><img class="svg" src="images/social1.svg" alt=""/></a><a href="#!"><img class="svg" src="images/social2.svg" alt=""/></a><a href="#!"><img class="svg" src="images/social3.svg" alt=""/></a><a href="#!"><img class="svg" src="images/social4.svg" alt=""/></a></div>
@@ -188,6 +182,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/fancybox.min.js"></script>
     <script src="js/main.js"></script>
     <script src="http://localhost:35729/livereload.js"></script>
   </body>
